--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    height: 100%;
+}
 /*Grota*/
 @font-face {
     font-family: 'Grota';
